--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,20 @@ body{
   display: inline;
   font-size: large;
   padding-left: 30px;
+  color: white;
 }
 
 .bar{
-  background-color: white; 
+  background-color: #3b86ff;
   padding: 15px;
 }
+
+.tail{
+  background-color: #0850C7;
+  padding: 5px 15px 5px 65%;
+  margin-top: 150px;
+}
+
 
 #barright{
   float: right;
@@ -36,14 +44,15 @@ body{
 a{
   padding: 8px 20px 8px 20px;
   margin: 0px 5px 0px 5px;
-  color: black;
+  color: white;
   text-decoration: none;
   border-radius: 10px;
 }
 
 a:hover{
   transition: 0.3s;
-  background-color: #dddddd;
+  background-color: #f3f3f3;
+  color: black;
 }
 
 .Container{
@@ -78,8 +87,21 @@ a:hover{
   padding: 0px 10px;
 }
 
+.tail_tieude{
+  font-weight: bold;
+  padding: 0px 10px;
+  color: white;
+  font-size: small;
+}
+
 .post_noidung{
   padding: 0px 10px 0px 30px;
+}
+
+.tail_noidung{
+  padding: 0px 10px 0px 30px;
+  color: white;
+  font-size: small;
 }
 
 .post_comment{
@@ -164,16 +186,18 @@ th{
   padding: 8px 20px 8px 20px;
   margin: 0px 5px 0px 5px;
   border-radius: 5px;
-  border: 1px rgb(90, 90, 90) solid;
+  border: 1px rgb(221, 221, 221) solid;
   display: inline;
   font-weight: bold;
+  color: white;
 }
 
 .nhapdiem_tieude{
   font-weight: bold;
   padding: 8px 20px 8px 20px;
   margin: 0px 5px 0px 5px;
-  display: inline;  
+  display: inline; 
+  color: white;
 }
 
 .nhapdiem_mon{
@@ -181,11 +205,20 @@ th{
   padding: 8px 20px 8px 20px;
   margin: 0px 5px 0px 5px;
   border-radius: 10px;
+  color: white;
 }
 
 .nhapdiem_mon:hover{
-  cursor: pointer;
-  
+  cursor: pointer;  
   transition: 0.3s;
-  background-color: #dddddd;
+  background-color:  #f3f3f3;
+  color: black;
+}
+
+.mother_of_tail{
+  background-color: blue;
+  color: white;
+  text-align: center;
+  font-size: small;
+  padding-bottom: 15px;
 }
